# MAI-OOP-LAB2

./: .gitignore  README.md
lab2/: CMakeLists.txt  main.cpp
lab2/include/: lab2.hpp
lab2/src/: lab2.cpp
lab2/test/: test.cpp
